# Fijee

./: .cproject  .gitignore  .project  CMakeLists.txt  FijeeConfig.cmake.in  FijeeConfigVersion.cmake.in  LICENSE  Makefile  README-CMAKE  README.md
Doc/: Doxyfile
Doc/template/: doxygen.sty  logo-cs.eps
DownhillSimplex/: .cproject  .project  DHSimplex  DHSimplex.cpp  Makefile  Makefile~  README  Simplex.cpp  Simplex.h  Simplex_test.cpp  my_program  my_program.cpp
Electrodes/: Electrodes_tACS.cxx  Electrodes_tACS.h
Fijee/: CMakeLists.txt  Fijee_XML_writer.h  Fijee_compression.h  Fijee_enum.h  Fijee_environment.h  Fijee_exception_handler.h  Fijee_log_management.h  Fijee_statistical_analysis.h  Fijee_thread_dispatching.h  Fijee_turnaround.h  fijee.h
Fijee/Biophysics/: Brain_rhythm.cxx  Brain_rhythm.h  Brain_rhythm_models.h  CMakeLists.txt  Fijee_biophysics.h  Jansen_Rit_1995.cxx  Jansen_Rit_1995.h  Leadfield_matrix.cxx  Leadfield_matrix.h  Molaee_Ardekani_Wendling_2009.cxx  Molaee_Ardekani_Wendling_2009.h  Population.cxx  Population.h  Wendling_2002.cxx  Wendling_2002.h
Fijee/Electrodes/: CMakeLists.txt  Electrodes_setup.h  Electrodes_tACS.cxx  Electrodes_tACS.h  Fijee_electrodes.h  Makefile
Fijee/Finite_element_method_models/: Boundaries.h  CMakeLists.txt  Conductivity.cxx  Conductivity.h  Electrodes_injection.h  Electrodes_setup.cxx  Electrodes_setup.h  Electrodes_surface.cxx  Field.h  Fijee_fem.h  Makefile  Model_solver.h  PDE_solver_parameters.cxx  PDE_solver_parameters.h  Parcellation_information.h  Physics.h  SL_direct.h  SL_subtraction.cxx  SL_subtraction.h  Spheres_electric_monopole.cxx  Sub_domaines.h  tCS_CEM_model.ufl  tCS_current_density_model.ufl  tCS_model.ufl  tCS_tACS.cxx  tCS_tACS.h  tCS_tDCS.cxx  tCS_tDCS.h  tCS_tDCS_local_conductivity.cxx  tCS_tDCS_local_conductivity.h
Fijee/Mesh_rendering/: Access_parameters.cxx  Access_parameters.h  Build_dipoles_list.h  Build_dipoles_list_high_density.cxx  Build_dipoles_list_high_density.h  Build_dipoles_list_knn.cxx  Build_dipoles_list_knn.h  Build_electrodes_list.cxx  Build_electrodes_list.h  Build_mesh.h  CGAL_image_filtering.h  CGAL_implicite_domain.h  CMakeLists.txt  CUDA_Conductivity_matching.h  CUDA_Conductivity_matching_functions.h  Conductivity_tensor.h  Dipole.h  Distance.cxx  Electrode.cxx  Electrode.h  Electrode_shape_cylinder.cxx  Fijee_mesh_rendering.h  Head_conductivity_tensor.cxx  Head_conductivity_tensor.h  Head_labeled_domain.cxx  Head_labeled_domain.h  Implicite_domain.h  Labeled_domain.h  Makefile  Mesh_generator.h  Parcellation.cxx  Parcellation.h  Parcellation_METIS.cxx  Parcellation_Scotch.cxx  Parcellation_method.h  Point.cxx  Point.h  Point_vector.cxx  README  Spheres_conductivity_tensor.cxx  (+8 more)
Fijee/Mesh_rendering/CppUnit/Point_Vector/: main.cxx
Fijee/Mesh_rendering/TEMP/: Makefile  test.cxx
Fijee/Utils/: CMakeLists.txt  Fijee_utils.h
Fijee/Utils/Compression/: Fijee_compression.h
Fijee/Utils/Data_structure/: Basic_point.h  Binary_search_tree_leaf.h  Edge.h  Graph_abstract_data_type.h  Gray_level_binary_search_tree.h  Vertex.h
Fijee/Utils/Minimizers/: Active_contour_model.cxx  Active_contour_model.h  Downhill_simplex.cxx  Downhill_simplex.h  EM_algorithm.cxx  EM_algorithm.h  Iterative_minimizer.h  Kmeans_clustering.h  Makefile  Minimizer.h  Topological_derivative.h
Finite_element_method_models/: Boundaries.h  CMakeLists.txt  Conductivity.cxx  Conductivity.h  Electrodes_injection.cxx  Electrodes_injection.h  Electrodes_setup.cxx  Electrodes_setup.h  Electrodes_surface.cxx  Electrodes_surface.h  Field.h  Intensity.cxx  Intensity.h  Makefile  Model_solver.h  PDE_solver_parameters.cxx  PDE_solver_parameters.h  Parcellation_information.h  Physics.cxx  Physics.h  SLD_model.h  SLD_model.ufl  SLS_model.h  SLS_model.ufl  SL_direct.cxx  SL_direct.h  SL_subtraction.cxx  SL_subtraction.h  Source.cxx  Source.h  Spheres_electric_monopole.cxx  Spheres_electric_monopole.h  Sub_domaines.h  main.cxx  tCS_electrical_field_model.ufl  tCS_field_model.h  tCS_field_model.ufl  tCS_model.h  tCS_model.ufl  tCS_tACS.cxx  (+5 more)
Inverse_problems/: Empirical_bayesian_model.cxx  Empirical_bayesian_model.h  Empirical_bayesian_noise.h  Inverse_model.h  Inverse_parameters.cxx  Inverse_parameters.h  Inverse_solver.cxx  Inverse_solver.h  Makefile  Noise.h  main.cxx
Mesh_rendering/: Access_parameters.cxx  Access_parameters.h  Build_dipoles_list.cxx  Build_dipoles_list.h  Build_dipoles_list_high_density.cxx  Build_dipoles_list_high_density.h  Build_dipoles_list_knn.cxx  Build_dipoles_list_knn.h  Build_electrodes_list.cxx  Build_electrodes_list.h  Build_labeled_domain.cxx  Build_labeled_domain.h  Build_mesh.cxx  Build_mesh.h  CGAL_image_filtering.h  CGAL_implicite_domain.cxx  CGAL_implicite_domain.h  CGAL_tools.h  CUDA_Conductivity_matching.cu  CUDA_Conductivity_matching.h  CUDA_Conductivity_matching_functions.h  Cell_conductivity.cxx  Cell_conductivity.h  Conductivity_tensor.cxx  Conductivity_tensor.h  Dipole.cxx  Dipole.h  Distance.cxx  Distance.h  Electrode.cxx  Electrode.h  Electrode_shape.h  Electrode_shape_cylinder.cxx  Electrode_shape_cylinder.h  Electrode_shape_sphere.cxx  Electrode_shape_sphere.h  Head_conductivity_tensor.cxx  Head_conductivity_tensor.h  Head_labeled_domain.cxx  Head_labeled_domain.h  (+25 more)
Report/: Fijee.bib  Fijee.tex  Makefile
Subtraction_method/: Boundaries.h  Conductivity.cxx  Conductivity.h  Makefile  PDE_solver_parameters.cxx  PDE_solver_parameters.h  Physical_model.h  Poisson.ufl  Source.cxx  Source.h  Sources.cxx  Sources.h  Sub_Domaines.h  Subtraction.cxx  Subtraction.h  main.cxx  pugiconfig.h  pugixml.h
Utils/: CMakeLists.txt  Fijee_environment.h  Fijee_exception_handler.h  Fijee_log_management.h  Statistical_analysis.h  Thread_dispatching.h  XML_writer.h  enum.h
Utils/Biophysics/: Makefile  (+16 more)
demo/Biophysics/: CMakeLists.txt  main.cxx
demo/FEM/SourceLocalization/: CMakeLists.txt  SourceLocalization.cxx
demo/FEM/tACS/: CMakeLists.txt  tACS.cxx
scripts/: fijee.sh
share/: a.out  fijee.xml  fijee.xml.in  main.cxx  sphere_CSF.xyz  sphere_brain.xyz  sphere_scalp.xyz  sphere_skull.xyz
(+67 files in other folders)
